Fixing top bar icons disappearing on mobile devices.

--- a/htdocs/css/openwebrx-header.css
+++ b/htdocs/css/openwebrx-header.css
@@ -44,6 +44,7 @@
 
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
 }
 
 .webrx-top-bar > * {
